<resources>
    <string name="app_name">GamifyWork</string>
    <string name="children">Kinder</string>
    <string name="Parents">Eltern</string>
    <string name="title_activity_parents">ParentsActivity</string>
    <string name="name">E-Mail</string>
    <string name="password">Passwort</string>
    <string name="login">Login</string>
    <string name="noAcc">Registrieren</string>
    <string name="register">Registrieren</string>
    <string name="haveAcc">Haben Sie bereits einen Account? Login</string>
    <string name="taskstodo">ToDo:</string>
    <string name="tasksready">Erledigt:</string>
</resources>
