<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.user.gamifywork.RegisterActivity">

    <EditText
        android:id="@+id/editTextregMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/name"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editTextregPword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="40"
        android:maxLines="1"
        android:singleLine="true"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/textViewhaveAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:contextClickable="false"
        android:text="@string/haveAcc"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark" />

</LinearLayout>
